cadvisor.daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: cadvisor-daemonset
  namespace: kube-system
  labels:
    app: cadvisor
spec:
  selector:
    matchLabels:
      app: cadvisor
  template:
    metadata:
      labels:
        app: cadvisor
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      restartPolicy: Always
      containers:
        - name: cadvisor
          image: google/cadvisor:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: rootfs
              mountPath: /rootfs
              readOnly: true
            - name: var-run
              mountPath: /var/run
              readOnly: true
            - name: sys
              mountPath: /sys
              readOnly: true
            - name: docker
              mountPath: /var/lib/docker
              readOnly: true
            - name: disk
              mountPath: /dev/disk
              readOnly: true
      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: var-run
          hostPath:
            path: /var/run
        - name: sys
          hostPath:
            path: /sys
        - name: docker
          hostPath:
            path: /var/lib/docker #Docker path in Host System
        - name: disk
          hostPath:
            path: /dev/disk
