postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: default
  labels:
    app: postgres
spec:
  replicas: 1
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:12
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgresql
              containerPort: 5432
          volumeMounts:
            - name: storage-volume
              mountPath: "/var/lib/postgresql/data"
      restartPolicy: Always
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: postgres-volume-claim
  selector:
    matchLabels:
      app: postgres
