redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: default
  labels:
    app: redis
spec:
  replicas: 1
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:5.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
      restartPolicy: Always
  selector:
    matchLabels:
      app: redis
