result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  template:
    metadata:
      name: result
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              memory: 128M
      restartPolicy: Always
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - result
                topologyKey: kubernetes.io/hostname
              weight: 50
  selector:
    matchLabels:
      app: result
