worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: worker
spec:
  replicas: 1
  template:
    metadata:
      name: worker
      labels:
        app: worker
    spec:
      containers:
        - name: worker-deployment
          image: epitechcontent/t-dop-600-worker:k8s
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 256M
      restartPolicy: Always
  selector:
    matchLabels:
      app: worker
