poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
  namespace: default
  labels:
    app: poll
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: poll
            port:
              name: http
